# rinx

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md
.github/workflows/: release.yml
src/: Cargo.toml  app.rs  book.rs  config.rs  fb2_parser.rs  handlers.rs  i18n.rs  layout.rs  library.rs  main.rs  ui.rs
src/ui/: library.rs  mod.rs  reader_popups.rs  settings.rs  status_bar.rs
