[package]
name = "rinx"
version = "0.4.6"
edition = "2024"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
ratatui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.31"
textwrap = "0.16"
walkdir = "2.4"
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.5"
phf = { version = "0.11", features = ["macros"] }  # <-- macros, не macro
zip = "2.1"
encoding_rs = "0.8"
