[package]
name = "rinx"
version = "0.4.8"
edition = "2024"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
dirs = "5.0"
encoding_rs = "0.8"
phf = { version = "0.11", features = ["macros"] }
quick-xml = "0.31"
ratatui = "=0.30.2"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.16"
url = "2.4"
walkdir = "2.4"
zip = "0.6"