[package]
name = "rink"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
roxmltree = "0.19"
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
encoding_rs = "0.8"
textwrap = { version = "0.16", features = ["unicode-linebreak", "unicode-width"] }
